--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <h3>Hello, i'm Radjij</h3>
     <p>Coucou</p>
     <script type="module" src="/src/main.tsx"></script>
   </body>
