--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS + HELLO</title>
+    <script type ="module" src="/src/components/dragndrop.tsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <p>Coucou Dimi ela</p>
-    <p>Mevlut est un feufollet</p>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
